# sparkplug

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
examples/: CMakeLists.txt  factorial_functor.cuh  single_backend_device_stub.cu  single_backend_host_strict_mock.cu  single_backend_host_stub.cu
examples/functor_test/: CMakeLists.txt  functor.cuh  functor_test.cu
examples/parameterized_test/: CMakeLists.txt  functor.cuh  test_functor.cu
include/sparkplug/di/: host_mock.hpp  signature.hpp  stub.cuh
include/sparkplug/mocking/: host_mock.hpp  mock.hpp  mock_config.hpp  mock_signature.hpp  signature.hpp
include/sparkplug/mocking/detail/: device_side_mock.cuh
include/sparkplug/testing/: backends.hpp  cuda_error.cuh  functor_test.hpp  functor_test_environment.cuh  launch_test_kernel.cuh  parameterized_test.hpp
include/sparkplug/testing/detail/: cuda_check.cuh  deduced_signature.hpp  device_backend_proxy.cuh  host_backend_proxy.cuh  mapped_proxy.hpp  test_driver.cuh
include/sparkplug/util/: cuda_check.cuh  cuda_error.cuh  cuda_stream.cuh  device_properties.cuh  pinned_host_vector.cuh  pinned_scalar.cuh
src/: cuda_error.cu  cuda_stream.cu  device_properties.cu
